--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "framer-motion": "^12.20.1",
+    "fullpage.js": "^4.0.37",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fullpage": "^0.1.19",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
